--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
         backdrop-filter: blur(12px);
         box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
           0 2px 4px -1px rgba(0, 0, 0, 0.06);
+        animation: slideIn 0.6s ease-out;
+      }
+
+      @keyframes slideIn {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
       }
 
       .header {
@@ -44,6 +56,20 @@
         background: linear-gradient(135deg, #60a5fa, #a78bfa);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
+        animation: gradientFlow 8s linear infinite;
+        background-size: 200% 200%;
+      }
+
+      @keyframes gradientFlow {
+        0% {
+          background-position: 0% 50%;
+        }
+        50% {
+          background-position: 100% 50%;
+        }
+        100% {
+          background-position: 0% 50%;
+        }
       }
 
       .subtitle {
@@ -55,6 +81,7 @@
         display: flex;
         justify-content: center;
         gap: 2rem;
+        margin-top: 2em;
       }
 
       .team {
@@ -63,7 +90,7 @@
         font-weight: 600;
         min-width: 150px;
         text-align: center;
-        transition: transform 0.2s;
+        transition: transform 0.3s ease;
       }
 
       .team:hover {
@@ -88,6 +115,29 @@
         border: 1px solid rgba(59, 130, 246, 0.2);
       }
 
+      .team.score-updated {
+        animation: drawGoldenBorder 0.5s ease-in-out alternate;
+        animation-iteration-count: 3;
+        animation-fill-mode: forwards;
+      }
+
+      @keyframes drawGoldenBorder {
+        0% {
+          border: 0px solid rgba(247, 190, 3, 0);
+          box-shadow: 0 0 5px rgba(247, 190, 3, 0.2);
+        }
+
+        50% {
+          border: 1px solid rgba(247, 190, 3, 0.7);
+          box-shadow: 0 0 15px rgba(247, 190, 3, 0.7);
+        }
+
+        100% {
+          border: 2px solid rgba(247, 190, 3, 1);
+          box-shadow: 0 0 25px rgba(247, 190, 3, 1);
+        }
+      }
+
       .main-content {
         margin: 1rem 0;
       }
@@ -106,6 +156,24 @@
         border-radius: 16px;
         margin-bottom: 1.5rem;
         box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        animation: imageFadeIn 0.8s ease-out;
+      }
+
+      @keyframes imageFadeIn {
+        from {
+          opacity: 0;
+          transform: scale(0.95);
+        }
+        to {
+          opacity: 1;
+          transform: scale(1);
+        }
+      }
+
+      .target-animal img:hover {
+        transform: scale(1.02);
+        box-shadow: 0 8px 12px -1px rgba(0, 0, 0, 0.2);
       }
 
       .target-animal h2 {
@@ -128,12 +196,35 @@
         border-radius: 16px;
         padding: 1rem;
         cursor: pointer;
-        transition: all 0.3s ease;
+        transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        animation: optionFadeIn 0.6s ease-out backwards;
+      }
+
+      .option:nth-child(1) {
+        animation-delay: 0.2s;
+      }
+      .option:nth-child(2) {
+        animation-delay: 0.4s;
+      }
+      .option:nth-child(3) {
+        animation-delay: 0.6s;
+      }
+
+      @keyframes optionFadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
       }
 
       .option:hover {
-        transform: translateY(-4px);
+        transform: translateY(-4px) scale(1.02);
         background: rgba(255, 255, 255, 0.08);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
       }
 
       .option img {
@@ -188,15 +279,49 @@
 
       .option.correct {
         border: 2px solid #ff69b4;
-        animation: correctPulse 2s infinite;
+        animation: correctAnswer 1s ease-out forwards;
+        animation-iteration-count: 2;
+      }
+
+      @keyframes correctAnswer {
+        0% {
+          transform: scale(1);
+          border-color: rgba(34, 197, 94, 0.4);
+          background: rgba(34, 197, 94, 0.2);
+        }
+        50% {
+          transform: scale(1.05);
+          border-color: rgba(34, 197, 94, 0.8);
+        }
+        100% {
+          transform: scale(1);
+          border-color: rgba(34, 197, 94, 1);
+          box-shadow: 0 0 20px rgba(34, 197, 94, 0.4);
+          background: rgba(34, 197, 94, 0.5);
+        }
       }
 
       .option.incorrect {
         border: 2px solid #ef4444;
         background: rgba(239, 68, 68, 0.2);
         opacity: 0.5;
+        animation: incorrectAnswer 0.5s ease-out forwards;
       }
 
+      @keyframes incorrectAnswer {
+        0%,
+        100% {
+          transform: translateX(0);
+        }
+        20%,
+        60% {
+          transform: translateX(-5px);
+        }
+        40%,
+        80% {
+          transform: translateX(5px);
+        }
+      }
       .option.shared {
         border: 3px dashed #fbbf24;
         background: rgba(251, 191, 36, 0.2);
@@ -216,15 +341,51 @@
         font-size: 1rem;
         font-weight: 600;
         cursor: pointer;
-        transition: all 0.2s;
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         background: rgba(255, 255, 255, 0.1);
         color: white;
         border: 1px solid rgba(255, 255, 255, 0.1);
+        position: relative;
+        overflow: hidden;
       }
 
       button:not(:disabled):hover {
         transform: translateY(-2px);
         background: rgba(255, 255, 255, 0.15);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      }
+
+      button:not(:disabled):active {
+        transform: translateY(1px);
+      }
+
+      button:not(:disabled)::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 5px;
+        height: 5px;
+        background: rgba(255, 255, 255, 0.5);
+        opacity: 0;
+        border-radius: 100%;
+        transform: scale(1, 1) translate(-50%);
+        transform-origin: 50% 50%;
+      }
+
+      button:not(:disabled):focus:not(:active)::after {
+        animation: ripple 1s ease-out;
+      }
+
+      @keyframes ripple {
+        0% {
+          transform: scale(0, 0);
+          opacity: 0.5;
+        }
+        100% {
+          transform: scale(50, 50);
+          opacity: 0;
+        }
       }
 
       button:disabled {
@@ -281,6 +442,17 @@
         color: #f8fafc;
         z-index: 1000;
         display: none; /* Hidden by default */
+        animation: finalScreenFade 0.8s ease-out;
+      }
+      @keyframes finalScreenFade {
+        from {
+          opacity: 0;
+          transform: scale(0.9);
+        }
+        to {
+          opacity: 1;
+          transform: scale(1);
+        }
       }
 
       .final-screen h2 {
@@ -339,6 +511,7 @@
         align-items: center;
         justify-content: center;
         padding: 2rem;
+        transition: opacity 0.3s ease;
       }
 
       .modal-content {
@@ -351,6 +524,18 @@
         max-width: 1200px;
         border-radius: 16px;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        animation: modalSlideIn 0.4s ease-out;
+      }
+
+      @keyframes modalSlideIn {
+        from {
+          opacity: 0;
+          transform: translateY(-20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
       }
 
       .close-modal {
@@ -400,7 +585,10 @@
         </div>
 
         <div class="options" id="options-container"></div>
-
+        <div class="scores">
+          <div class="team team-a">קבוצה א׳: <span id="score-a">0</span></div>
+          <div class="team team-b">קבוצה ב׳: <span id="score-b">0</span></div>
+        </div>
         <!-- Explanation Section -->
         <div class="explanation" id="explanation-container">
           <h3>השוואת סיווג טקסונומי</h3>
@@ -409,11 +597,6 @@
             מסך מלא
           </button>
         </div>
-      </div>
-
-      <div class="scores">
-        <div class="team team-a">קבוצה א׳: <span id="score-a">0</span></div>
-        <div class="team team-b">קבוצה ב׳: <span id="score-b">0</span></div>
       </div>
 
       <div class="controls">
@@ -433,7 +616,7 @@
     <div class="final-screen" id="final-screen">
       <h2 id="final-message">מנצחת!</h2>
       <p id="final-scores">קבוצה א׳: 0 נקודות | קבוצה ב׳: 0 נקודות</p>
-      <button id="restart-btn">התחל מחדש</button>
+      <button id="restart-btn" style="display: none">התחל מחדש</button>
     </div>
 
     <!-- Full-Screen Modal for Taxonomy Diagram -->
@@ -813,47 +996,47 @@
             "ג'ירפה קרובה יותר לאוקפי מאשר לזברה או טפיר אסייתי, מכיוון ששניהם שייכים למשפחת ג'ירפיים.",
         },
 
-        // 7) צבוע
+        // 7) דורבן
         {
           mainAnimal: {
-            name: "צבוע",
-            image: "images/hyena.jpg",
+            name: "דורבן",
+            image: "images/hystrix_indica.jpg",
             taxonomy: {
               Kingdom: "בעלי חיים",
               Phylum: "מיתרניים",
               Class: "יונקים",
-              Order: "טורפים",
-              Family: "צבועיים", // (Hyaenidae)
-              Genus: "צבוע נקוד", // (Crocuta/Hyaena) – כאן פשוט "צבוע"
-              Species: "צבוע נקוד", // (Crocuta crocuta)
+              Order: "מכרסמים",
+              Family: "דורבניים", // (Hyaenidae)
+              Genus: "דורבן", // (Crocuta/Hyaena) – כאן פשוט "צבוע"
+              Species: "דורבן מצוי", // (Crocuta crocuta)
             },
           },
           options: [
             {
-              name: "תן",
-              image: "images/jackal.jpg",
+              name: "קיפוד",
+              image: "images/hedgehog.jpg",
               taxonomy: {
                 Kingdom: "בעלי חיים",
                 Phylum: "מיתרניים",
                 Class: "יונקים",
-                Order: "טורפים",
-                Family: "כלביים", // (Canidae)
-                Genus: "כלב", // (Canis)
-                Species: "תן זהוב", // (Canis aureus)
+                Order: "אוכלי חרקים",
+                Family: "קיפודיים", // (Canidae)
+                Genus: "קיפוד", // (Canis)
+                Species: "קיפוד מצוי", // (Canis aureus)
               },
             },
             {
-              name: "נמייה ננסית",
-              image: "images/mongoose.jpg",
+              name: "אוגר",
+              image: "images/hamster.jpg",
               correct: true,
               taxonomy: {
                 Kingdom: "בעלי חיים",
                 Phylum: "מיתרניים",
                 Class: "יונקים",
-                Order: "טורפים",
-                Family: "נמייתיים", // (Herpestidae)
-                Genus: "נמייה ננסית", // (Helogale)
-                Species: "נמייה ננסית מצויה", // (Helogale parvula)
+                Order: "מכרסמים",
+                Family: "אוגריים", // (Herpestidae)
+                Genus: "אוגר", // (Helogale)
+                Species: "אוגר זהוב", // (Helogale parvula)
               },
             },
             {
@@ -874,60 +1057,60 @@
             "נמייה ננסית קרובה יותר לצבוע מאשר לגירית דבש או תן מבחינה אבולוציונית.",
         },
 
-        // 8) חדף פיל
+        // 8) קיפוד ים
         {
           mainAnimal: {
-            name: "חדף פיל",
-            image: "images/shrew.jpg",
+            name: "קיפוד ים",
+            image: "images/tripneustes.jpg",
             taxonomy: {
               Kingdom: "בעלי חיים",
-              Phylum: "מיתרניים",
-              Class: "יונקים",
-              Order: "חדפי פיל", // (Macroscelidea)
-              Family: "חדפי פיל", // (Macroscelididae)
-              Genus: "ארכף גדול", // (Elephantulus/Petrodromus) - כאן נשאר בעברית פשוטה
-              Species: "ארכף אדום-ראש", // למשל Elephantulus rozeti
+              Phylum: "קווצי עור",
+              Class: "קיפודי ים",
+              Order: "Camarodonta",
+              Family: "Toxopneustidae",
+              Genus: "Tripneustes",
+              Species: "Tripneustes ventricosus",
             },
           },
           options: [
             {
-              name: "פיל",
-              image: "images/elephant.jpg",
+              name: "מלפפון ים",
+              image: "images/polycheira_rufescens.jpg",
               correct: true,
               taxonomy: {
                 Kingdom: "בעלי חיים",
-                Phylum: "מיתרניים",
-                Class: "יונקים",
-                Order: "חדקאים", // (Proboscidea)
-                Family: "פיליים", // (Elephantidae)
-                Genus: "פיל", // (Elephas)
-                Species: "פיל אסייתי", // (Elephas maximus)
+                Phylum: "קווצי עור",
+                Class: "Holothuroidea",
+                Order: "Apodida",
+                Family: "Chiridotidae",
+                Genus: "Polycheira",
+                Species: "Polycheira rufescens",
               },
             },
             {
-              name: "אוגר",
-              image: "images/hamster.jpg",
+              name: "קיפוד",
+              image: "images/hedgehog.jpg",
               taxonomy: {
                 Kingdom: "בעלי חיים",
                 Phylum: "מיתרניים",
                 Class: "יונקים",
-                Order: "מכרסמים", // (Rodentia)
-                Family: "אוגריים", // (Cricetidae)
-                Genus: "אוגר",
-                Species: "אוגר סורי", // (Mesocricetus auratus) כדוגמה
+                Order: "אוכלי חרקים",
+                Family: "קיפודיים", // (Canidae)
+                Genus: "קיפוד", // (Canis)
+                Species: "קיפוד מצוי", // (Canis aureus)
               },
             },
             {
-              name: "עכבר",
-              image: "images/mouse.jpg",
+              name: "ספוג ים",
+              image: "images/aplysina_archeri.jpg",
               taxonomy: {
                 Kingdom: "בעלי חיים",
-                Phylum: "מיתרניים",
-                Class: "יונקים",
-                Order: "מכרסמים",
-                Family: "עכבריים", // (Muridae)
-                Genus: "עכבר",
-                Species: "עכבר מצוי", // (Mus musculus)
+                Phylum: "ספוגים",
+                Class: "ספוגנים",
+                Order: "Verongiida",
+                Family: "Aplysinidae", // (Muridae)
+                Genus: "Aplysina",
+                Species: "Aplysina archeri", // (Mus musculus)
               },
             },
           ],
@@ -1097,6 +1280,11 @@ classDef correctAnswerStyle fill:#4CAF50,stroke:#227025,color:#fff,stroke-width:
 
         // Hide explanation section
         document.getElementById("explanation-container").style.display = "none";
+
+        // remove scores-updated class from team elements
+        document.querySelectorAll(".team").forEach((team) => {
+          team.classList.remove("score-updated");
+        });
       };
 
       /**
@@ -1192,6 +1380,13 @@ classDef correctAnswerStyle fill:#4CAF50,stroke:#227025,color:#fff,stroke-width:
         document.getElementById("score-a").textContent = scores.a;
         document.getElementById("score-b").textContent = scores.b;
 
+        if (selections.a === correctIndex) {
+          document.querySelector(`.team-a`).classList.add("score-updated");
+        }
+        if (selections.b === correctIndex) {
+          document.querySelector(`.team-b`).classList.add("score-updated");
+        }
+
         // Display explanation
         const diagram = generateTaxonomyDiagram(
           question.mainAnimal,
@@ -1244,6 +1439,18 @@ classDef correctAnswerStyle fill:#4CAF50,stroke:#227025,color:#fff,stroke-width:
 
         finalMessage.textContent = message;
         finalScores.textContent = `קבוצה א׳: ${scores.a} נקודות | קבוצה ב׳: ${scores.b} נקודות`;
+
+        // Add thank-you paragraph
+        const thankYouMessage = document.createElement("p");
+        thankYouMessage.textContent = `
+        תודה רבה על השתתפותכם בחידון הטקסונומיה שלנו! החידון נועד להדגיש כי לעיתים קרובות, דמיון חיצוני בין בעלי חיים אינו מעיד על קרבה טקסונומית אמיתית. מטרתנו הייתה להעמיק את ההבנה שלכם ביחסים האבולוציוניים בין מינים שונים ולהמחיש שמראה חיצוני אינו בהכרח משקף את הקרבה הביולוגית. אנו מקווים שהחידון תרם להבנתכם של הסדר ההיררכי בטקסונומיה ואת חשיבות הסיווג המדעי המדויק. המשיכו לגלות וללמוד על המגוון העשיר והמרתק של עולם החי שסביבנו!
+`;
+        thankYouMessage.style.marginTop = "1rem";
+        thankYouMessage.style.fontSize = "1.25rem";
+        thankYouMessage.style.textAlign = "center";
+        thankYouMessage.style.width = "80%";
+        thankYouMessage.style.color = "#94a3b8";
+        finalScreen.appendChild(thankYouMessage);
 
         finalScreen.style.display = "flex";
 
@@ -1338,13 +1545,10 @@ classDef correctAnswerStyle fill:#4CAF50,stroke:#227025,color:#fff,stroke-width:
         // Add the Mermaid content to the modal
         fullscreenDiagramContainer.innerHTML = `<pre class="mermaid">${diagram}</pre>`;
 
-        // Allow the browser to render and calculate dimensions
-        setTimeout(() => {
-          mermaid.init(
-            undefined,
-            fullscreenDiagramContainer.querySelectorAll(".mermaid")
-          );
-        }, 100);
+        mermaid.init(
+          undefined,
+          fullscreenDiagramContainer.querySelectorAll(".mermaid")
+        );
       });
 
       // When the user clicks on <span> (x), close the modal
