--- a/index.html
+++ b/index.html
@@ -81,44 +81,113 @@
         display: flex;
         justify-content: center;
         gap: 2rem;
-        margin-top: 2em;
+        margin: 2em auto;
+        max-width: 800px;
+        padding: 0 1rem;
       }
 
       .team {
-        padding: 1rem 2rem;
-        border-radius: 16px;
+        flex: 1;
+        background: rgba(255, 255, 255, 0.05);
+        border-radius: 24px;
+        padding: 1.5rem;
+        position: relative;
+        overflow: hidden;
+        transition: all 0.3s ease;
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+          0 2px 4px -1px rgba(0, 0, 0, 0.06);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.75rem;
+      }
+
+      .team::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 4px;
+        background: linear-gradient(
+          90deg,
+          transparent,
+          rgba(255, 255, 255, 0.2),
+          transparent
+        );
+      }
+
+      .team-label {
+        position: absolute;
+        top: -12px;
+        right: 50%;
+        transform: translateX(50%);
+        padding: 0.5rem 1rem;
+        border-radius: 20px;
         font-weight: 600;
-        min-width: 150px;
-        text-align: center;
-        transition: transform 0.3s ease;
+        font-size: 0.875rem;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+      }
+
+      .team-score {
+        font-size: 3rem;
+        font-weight: 800;
+        line-height: 1;
+        background: linear-gradient(
+          135deg,
+          #fff 0%,
+          rgba(255, 255, 255, 0.7) 100%
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
 
       .team:hover {
-        transform: translateY(-2px);
+        transform: translateY(-4px);
+        box-shadow: 0 8px 12px -1px rgba(0, 0, 0, 0.2),
+          0 4px 6px -1px rgba(0, 0, 0, 0.1);
       }
 
       .team-a {
         background: linear-gradient(
           135deg,
-          rgb(255, 105, 180, 0.2),
-          rgba(255, 105, 180, 0.1)
+          rgba(255, 105, 180, 0.15) 0%,
+          rgba(255, 105, 180, 0.05) 100%
         );
-        border: 1px solid rgba(255, 105, 180, 0.4);
+        border: 1px solid rgba(255, 105, 180, 0.2);
       }
 
       .team-b {
         background: linear-gradient(
           135deg,
-          rgba(59, 130, 246, 0.2),
-          rgba(59, 130, 246, 0.1)
+          rgba(59, 130, 246, 0.15) 0%,
+          rgba(59, 130, 246, 0.05) 100%
         );
         border: 1px solid rgba(59, 130, 246, 0.2);
       }
 
       .team.score-updated {
-        animation: drawGoldenBorder 0.5s ease-in-out alternate;
-        animation-iteration-count: 3;
-        animation-fill-mode: forwards;
+        animation: scoreUpdatePulse 1s ease-out;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards; /* Ensures the final frame persists */
+      }
+
+      @keyframes scoreUpdatePulse {
+        0% {
+          transform: scale(1);
+          box-shadow: 0 0 0 0 rgba(247, 190, 3, 0.4);
+        }
+        50% {
+          transform: scale(1.05);
+          box-shadow: 0 0 20px 10px rgba(247, 190, 3, 0.2);
+        }
+        100% {
+          transform: scale(1);
+          box-shadow: 0 0 15px rgba(247, 190, 3, 1); /* Final gold glow */
+          border: 2px solid rgba(247, 190, 3, 1); /* Final gold border */
+        }
       }
 
       @keyframes drawGoldenBorder {
@@ -241,17 +310,11 @@
         text-align: center;
       }
 
-      .team-label {
-        position: absolute;
-        top: -12px;
-        right: 50%;
-        transform: translateX(50%);
-        padding: 0.5rem 1rem;
-        border-radius: 20px;
-        font-weight: 600;
-        font-size: 0.875rem;
-        opacity: 0;
-        transition: opacity 0.3s ease;
+      .team-label-score {
+        font-size: 1.5rem;
+        font-weight: 700;
+        color: #f8fafc;
+        text-align: center;
       }
 
       .selected-a {
@@ -569,6 +632,79 @@
       .open-modal-btn:hover {
         background: #4338ca;
       }
+
+      .score-particle {
+        position: absolute;
+        pointer-events: none;
+        animation: particleFloat 2s ease-out forwards;
+        font-weight: bold;
+        color: #fbbf24;
+      }
+
+      @keyframes particleFloat {
+        0% {
+          transform: translate(-50%, 0px) scale(1);
+          opacity: 1;
+        }
+        100% {
+          transform: translate(-50%, -50px) scale(1.5);
+          opacity: 0;
+        }
+      }
+
+      #transition-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        z-index: 2000;
+        opacity: 0;
+        display: none;
+        transition: opacity 0.5s ease;
+      }
+
+      #transition-overlay.show {
+        display: block;
+        animation: fadeIn 0.5s ease forwards;
+      }
+
+      #transition-overlay.hide {
+        display: block; /* Retain display: block during fade-out */
+        animation: fadeOut 0.5s ease forwards;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+
+      @keyframes fadeOut {
+        from {
+          opacity: 1;
+        }
+        to {
+          opacity: 0;
+        }
+      }
+
+      #overlay-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 3rem;
+        color: #ffffff;
+        font-weight: bold;
+        text-align: center;
+        animation: textFadeIn 0.5s ease forwards;
+        animation-delay: 0.5s;
+      }
     </style>
   </head>
   <body>
@@ -586,8 +722,14 @@
 
         <div class="options" id="options-container"></div>
         <div class="scores">
-          <div class="team team-a">קבוצה א׳: <span id="score-a">0</span></div>
-          <div class="team team-b">קבוצה ב׳: <span id="score-b">0</span></div>
+          <div class="team team-a">
+            <div class="team-label-score">קבוצה א׳</div>
+            <div class="team-score" id="score-a">0</div>
+          </div>
+          <div class="team team-b">
+            <div class="team-label-score">קבוצה ב׳</div>
+            <div class="team-score" id="score-b">0</div>
+          </div>
         </div>
         <!-- Explanation Section -->
         <div class="explanation" id="explanation-container">
@@ -628,6 +770,9 @@
         <h3 style="text-align: center; color: #f8fafc">טקסונומיה מלאה</h3>
         <div id="fullscreen-taxonomy-diagram" style="margin-top: 1rem"></div>
       </div>
+    </div>
+    <div id="transition-overlay">
+      <div id="overlay-text"></div>
     </div>
 
     <script>
@@ -752,67 +897,6 @@
           ],
           explanation:
             "שפן סלע קרוב יותר מבחינה אבולוציונית לפיל מאשר לקפיברה או ארנבת בר.",
-        },
-
-        // 3) דינוזאור
-        {
-          mainAnimal: {
-            name: "חתול הבית",
-            image: "images/cat.jpg",
-            taxonomy: {
-              Kingdom: "בעלי חיים",
-              Phylum: "מיתרניים",
-              Class: "יונקים",
-              Order: "טורפים", // (Carnivora)
-              Family: "חתוליים", // (Felidae)
-              Genus: "חתול", // (Felis)
-              Species: "חתול בר", // (Felis catus)
-            },
-          },
-          options: [
-            {
-              name: "זבד אפריקאי",
-              image: "images/civet.jpg",
-              taxonomy: {
-                Kingdom: "בעלי חיים",
-                Phylum: "מיתרניים",
-                Class: "יונקים",
-                Order: "טורפים", // (Squamata)
-                Family: "גחניים", // (Varanidae)
-                Genus: "Civettictis", // (Varanus)
-                Species: "זבד אפריקני", // דוגמה כללית ללטאת כוח
-              },
-            },
-            {
-              name: "סרוואל",
-              correct: true,
-              image: "images/serval.jpg",
-              taxonomy: {
-                Kingdom: "בעלי חיים",
-                Phylum: "מיתרניים",
-                Class: "יונקים",
-                Order: "טורפים", // (Squamata)
-                Family: "חתוליים", // (Varanidae)
-                Genus: "סרוואל", // (Varanus)
-                Species: "סרוואל", // דוגמה כללית ללטאת כוח
-              },
-            },
-            {
-              name: "פוסה",
-              image: "images/fossa.jpg",
-              taxonomy: {
-                Kingdom: "בעלי חיים",
-                Phylum: "מיתרניים",
-                Class: "יונקים",
-                Order: "טורפים", // (Squamata)
-                Family: "טורפי מדגסקר", // (Varanidae)
-                Genus: "פוסה", // (Varanus)
-                Species: "פוסה", // דוגמה כללית ללטאת כוח
-              },
-            },
-          ],
-          explanation:
-            "יונה קרובה יותר לדינוזאור מאשר לטאת כוח או תנין, הודות לקרבה אבולוציונית.",
         },
 
         // 4) קרנף
@@ -1119,6 +1203,65 @@
           explanation:
             "חדף פיל (Elephant Shrew) קרוב יותר לפיל מאשר לעכבר או אוגר מבחינה אבולוציונית, שכן הוא נמנה על קבוצת האפרותריה.",
         },
+        {
+          mainAnimal: {
+            name: "חתול הבית",
+            image: "images/cat.jpg",
+            taxonomy: {
+              Kingdom: "בעלי חיים",
+              Phylum: "מיתרניים",
+              Class: "יונקים",
+              Order: "טורפים", // (Carnivora)
+              Family: "חתוליים", // (Felidae)
+              Genus: "חתול", // (Felis)
+              Species: "חתול בר", // (Felis catus)
+            },
+          },
+          options: [
+            {
+              name: "זבד אפריקאי",
+              image: "images/civet.jpg",
+              taxonomy: {
+                Kingdom: "בעלי חיים",
+                Phylum: "מיתרניים",
+                Class: "יונקים",
+                Order: "טורפים", // (Squamata)
+                Family: "גחניים", // (Varanidae)
+                Genus: "Civettictis", // (Varanus)
+                Species: "זבד אפריקני", // דוגמה כללית ללטאת כוח
+              },
+            },
+            {
+              name: "סרוואל",
+              correct: true,
+              image: "images/serval.jpg",
+              taxonomy: {
+                Kingdom: "בעלי חיים",
+                Phylum: "מיתרניים",
+                Class: "יונקים",
+                Order: "טורפים", // (Squamata)
+                Family: "חתוליים", // (Varanidae)
+                Genus: "סרוואל", // (Varanus)
+                Species: "סרוואל", // דוגמה כללית ללטאת כוח
+              },
+            },
+            {
+              name: "פוסה",
+              image: "images/fossa.jpg",
+              taxonomy: {
+                Kingdom: "בעלי חיים",
+                Phylum: "מיתרניים",
+                Class: "יונקים",
+                Order: "טורפים", // (Squamata)
+                Family: "טורפי מדגסקר", // (Varanidae)
+                Genus: "פוסה", // (Varanus)
+                Species: "פוסה", // דוגמה כללית ללטאת כוח
+              },
+            },
+          ],
+          explanation:
+            "יונה קרובה יותר לדינוזאור מאשר לטאת כוח או תנין, הודות לקרבה אבולוציונית.",
+        },
       ];
 
       let currentQuestion = 0;
@@ -1146,6 +1289,29 @@
           padding: 20,
         },
       });
+
+      function createScoreParticle(teamElement, score) {
+        console.log("Creating score particle for", teamElement, score);
+        const particle = document.createElement("div");
+        particle.className = "score-particle";
+        particle.textContent = "+1";
+
+        // Calculate position immediately
+        const rect = teamElement.getBoundingClientRect();
+        const x = rect.left + rect.width / 2 + window.scrollX; // Center horizontally
+        const y = rect.top + rect.height / 2 + window.scrollY; // Center vertically
+
+        // Set position
+        particle.style.position = "absolute";
+        particle.style.left = `${x}px`;
+        particle.style.top = `${y}px`;
+
+        document.body.appendChild(particle);
+
+        particle.addEventListener("animationend", () => {
+          particle.remove();
+        });
+      }
 
       // Function to generate enhanced taxonomy diagram
       function generateTaxonomyDiagram(mainAnimal, options) {
@@ -1246,6 +1412,9 @@
       }
 
       const updateUI = () => {
+        const sound = new Audio("sounds/next.mp3");
+        sound.play();
+
         const question = quizData[currentQuestion];
 
         document.getElementById("main-animal-name").textContent =
@@ -1298,6 +1467,8 @@
         const options = document.querySelectorAll(".option");
         const option = options[index];
         const teamLabel = option.querySelector(".team-label");
+        const sound = new Audio("sounds/select.mp3");
+        sound.play();
 
         // CASE 1: If Team A hasn't picked yet, select for A
         if (selections.a === null) {
@@ -1383,10 +1554,23 @@
         document.getElementById("score-b").textContent = scores.b;
 
         if (selections.a === correctIndex) {
-          document.querySelector(`.team-a`).classList.add("score-updated");
+          const teamAElement = document.querySelector(".team-a");
+          teamAElement.classList.add("score-updated");
+          createScoreParticle(teamAElement, scores.a);
         }
         if (selections.b === correctIndex) {
-          document.querySelector(`.team-b`).classList.add("score-updated");
+          const teamBElement = document.querySelector(".team-b");
+          teamBElement.classList.add("score-updated");
+          createScoreParticle(teamBElement, scores.b);
+        }
+
+        // if one of the teams got the correct answer, play the correct sound
+        if (selections.a === correctIndex || selections.b === correctIndex) {
+          const sound = new Audio("sounds/success.mp3");
+          sound.play();
+        } else {
+          const sound = new Audio("sounds/fail.mp3");
+          sound.play();
         }
 
         // Display explanation
@@ -1415,19 +1599,63 @@
         document.getElementById("next-btn").disabled = false;
       };
 
-      const nextQuestion = () => {
-        currentQuestion++;
-        if (currentQuestion >= quizData.length) {
-          showFinalScreen();
-        } else {
-          updateUI();
+      const showOverlay = (questionNumber) => {
+        // if questionNumber is larger than the number of questions, show the final screen
+        if (questionNumber > quizData.length) {
+          return;
         }
+        const overlay = document.getElementById("transition-overlay");
+        const overlayText = document.getElementById("overlay-text");
+        overlayText.textContent = `שאלה ${questionNumber}`;
+        overlay.style.display = "block"; // Ensure overlay is visible
+        overlay.classList.remove("hide");
+        overlay.classList.add("show");
       };
 
+      const hideOverlay = () => {
+        const overlay = document.getElementById("transition-overlay");
+        setTimeout(() => {
+          overlay.classList.remove("show");
+          overlay.classList.add("hide");
+          overlay.addEventListener(
+            "animationend",
+            () => {
+              overlay.style.display = "none"; // Hide after animation
+            },
+            { once: true }
+          );
+        }, 2000);
+      };
+
+      const overlay = document.getElementById("transition-overlay");
+
+      // Modify nextQuestion to include overlay logic
+      const nextQuestion = () => {
+        const nextQuestionNumber = currentQuestion + 2;
+        showOverlay(nextQuestionNumber);
+        setTimeout(() => {
+          currentQuestion++;
+          if (currentQuestion >= quizData.length) {
+            showFinalScreen();
+          } else {
+            updateUI();
+            // Smooth scroll to target-animal section after the UI update
+            setTimeout(() => {
+              document.querySelector(".target-animal").scrollIntoView({
+                behavior: "smooth",
+                block: "start",
+              });
+            }, 50);
+          }
+          hideOverlay();
+        }, 500); // Match the overlay's transition duration
+      };
       const showFinalScreen = () => {
         const finalScreen = document.getElementById("final-screen");
         const finalMessage = document.getElementById("final-message");
         const finalScores = document.getElementById("final-scores");
+        const sound = new Audio("sounds/applause.mp3");
+        sound.play();
 
         // Determine the winner
         let message = "";
