--- a/index.html
+++ b/index.html
@@ -1744,7 +1744,7 @@
         // Add creators names
         const creatorsMessage = document.createElement("p");
         creatorsMessage.textContent = `
-              איתי לייטנר, תמר מטס
+        איתי לייטנר, תמר מטס, דניאל כהן
               `;
         creatorsMessage.style.marginTop = "1rem";
         creatorsMessage.style.fontSize = "1.25rem";
